# torch-zig

./: .gitignore  README.md  build.zig  build.zig.zon
examples/: mnist_train.zig
extra/: params.json  params.py
libtch/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  torch_api.cpp  torch_api.h  torch_api_generated.h
src/: main.zig  safetensors.zig  tensor.zig  torch.zig  utils.zig
src/nn/: activation.zig  conv.zig  embedding.zig  functional.zig  init.zig  linear.zig  module.zig  norm.zig  transformer.zig
src/vision/: alexnet.zig  convnext.zig  densenet.zig  efficientnet.zig  googlenet.zig  inception.zig  mnasnet.zig  mobilenet_v2.zig  mobilenet_v3.zig  regnet.zig  resnet.zig  shufflenet_v2.zig  squeezenet.zig  swin_transformer.zig  test_models.zig  vgg.zig  vit.zig
